Record the Mockito dynamic-agent warning under JDK 21 in CLAUDE.md
BAH-5101 is closed, so the one genuine future risk it carried needed a durable
home. The suite passes today; a future JDK that enforces the restriction will
break it. Names the fix so whoever hits it does not re-derive it.